@@ -3,6 +3,20 @@ Name=Text::Balanced::Marpa
 Changelog.Creator=Module::Metadata::Changes V 2.05
 Changelog.Parser=Config::IniFiles V 2.83
 
+[V 1.02]
+Date=2014-12-31T11:10:00
+Comments= <<EOT
+- Change the default value for text() from '' to \''.
+- Add the length() and pos() mutators, to allow the user to control the call to the recognizer's
+read() method. See the FAQ.
+- Add the exhaustion_is_fatal option. See error_number() == 6 for details.
+- When the parse is successful, error_message() now returns 'OK'. It used to return ''.
+- Add t/skip.prefix.t to demonstrate pos() and length().
+- Add scripts/tiny.pl for quick tests without Test::More.
+- Add the escape_char() mutator, to allow the user to overrider the default baskslash escape char.
+- Add t/non.default.escapes.t.
+EOT
+
 [V 1.01]
 Date=2014-12-29T08:41:00
 Comments= <<EOT
